<?xml version="1.0"?>
<package>
  <name>pose_transformation</name>

  <version>0.0.0</version>

  <description>The pose_transformation package could subscribe tag_detection_pose from multiple apriltag detector and compute the transformation among cameras using tf</description>

  <author>Howard Chen</author>
  <maintainer email="s880367@gmail.com">Howard Chen</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>


</package>